<resources>
    <string name="app_name">Stars</string>
    <string name="welcome">Bem vindo \n ao \n Stars</string>
    <string name="hint_search">Buscar</string>
    <string name="title_menu_history">Histórico</string>
    <string name="title_menu_about">Sobre</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_home_cart">Carrinho</string>

    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <string name="error_default">Parece que algo deu errado e a operação não foi concluída. Por favor tente novamente.</string>
    <string name="error_empty">Favor selecionar um produto.</string>
    <string name="empty_default">Não encontramos \n nenhum produto.</string>
    <string name="empty_buy">Faça sua primeira compra</string>
    <string name="login_google">Login com Google</string>
    <string name="login_facebook">Login com Facebook</string>

    <string name="ok">OK</string>
    <string name="confirm">Comprar</string>
    <string name="atention">Atenção</string>
    <string name="title_card">Dados do Cartão</string>


    <string name="total">Total\n</string>
    <string name="qtd">QTD\n</string>
    <string name="finish_buy">Finalizar Compra</string>
    <string name="add_cart">Adicionar ao carrinho</string>


    <string name="app_contact_email">filipenunes.developer@gmail.com</string>
    <string name="text_contact_subject">Email de contato</string>
    <string name="text_send_email">Enviar email</string>
    <string name="label_current_version">Versão</string>
    <string name="title_contact">Contato</string>
    <string name="title_cellphone">Telefone</string>
    <string name="cellphone">51996505386</string>

    <!--Default-->
    <string name="plus">+</string>
    <string name="less">-</string>


    <!--Dialog-->
    <string name="dialog_number">Numero do cartão</string>
    <string name="dialog_cvv">CVV</string>
    <string name="dialog_date_exp">Data de vencimento</string>
    <string name="dialog_name">Nome do titular</string>


    <string name="error_auth">Erro para autenticar</string>
    <string name="facebook_app_id">279891399408119</string>
    <string name="fb_login_protocol_scheme">fb279891399408119</string>

</resources>
