<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/textDialog"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/dialog_number" />

        <EditText
            android:id="@+id/number_card"
            style="@style/editTextDialog"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:labelFor="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/textDialog"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/number_card"
            android:layout_marginTop="@dimen/item_description_margin"
            android:text="@string/dialog_cvv" />

        <EditText
            android:id="@+id/cvv_card"
            style="@style/editTextDialog"
            android:layout_alignEnd="@+id/textView"

            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:labelFor="@+id/textView2"
            android:maxLength="@integer/max_length_cvv" />

        <TextView
            android:id="@+id/textView3"
            style="@style/textDialog"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/item_sub_title_height"
            android:text="@string/dialog_date_exp" />

        <EditText
            android:id="@+id/date_card"
            style="@style/editTextDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:inputType="datetime"
            android:labelFor="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            style="@style/textDialog"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cvv_card"
            android:layout_marginTop="@dimen/item_description_margin"
            android:text="@string/dialog_name" />

        <EditText
            android:id="@+id/name_card"
            style="@style/editTextDialog"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:inputType="textPersonName"
            android:labelFor="@+id/textView4" />

    </RelativeLayout>
</layout>