<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="br.com.starstore.viewmodel.CartViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/DefaultEmptyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableBottom="@drawable/ic_placeholder"
                android:text="@string/empty_default"
                android:textColor="@color/textColorLight"
                app:font="@{`semi_bold`}"
                app:visible="@{viewModel.showEmpty}" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/itemList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:visible="@{viewModel.showContent}" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                app:visible="@{viewModel.showProgress}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margin_fap"
                android:background="@drawable/background_ring"
                android:drawableEnd="@drawable/ic_add_shopping_cart_white"
                android:drawablePadding="@dimen/item_margin_start_end"
                android:gravity="center"
                android:onClick="@{() -> viewModel.goHistory()}"
                android:padding="@dimen/item_margin_start_end"
                android:text="@{viewModel.totalProductCart}"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium"
                app:font="@{`bold`}" />
        </RelativeLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clipToPadding="true"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/item_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/item_sub_title_height"
                        android:layout_height="@dimen/item_sub_title_height"
                        android:background="@drawable/background_add_cart"
                        android:onClick="@{() -> viewModel.removeQtd()}"
                        android:text="@string/less"
                        android:textSize="@dimen/text_large" />

                    <EditText
                        android:layout_width="@dimen/weight"
                        android:layout_height="@dimen/item_sub_title_height"
                        android:layout_weight="1"
                        android:background="@drawable/background_add_cart"
                        android:gravity="center"
                        android:text="@={`` + viewModel.qtd}"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_large"
                        app:font="@{`semi_bold`}" />

                    <Button
                        android:layout_width="@dimen/item_sub_title_height"
                        android:layout_height="@dimen/item_sub_title_height"
                        android:background="@drawable/background_add_cart"
                        android:onClick="@{() -> viewModel.addQtd()}"
                        android:text="@string/plus"
                        android:textSize="@dimen/text_large" />

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/item_margin"
                    android:background="@color/colorAccent"
                    android:onClick="@{() -> viewModel.saveProduct()}"
                    android:text="@string/add_cart"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>